Fix overflow, stop innerHTML error on copy

--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -18,7 +18,7 @@ pre[class*="language-"] {
 }
 
 /* Code blocks */
-code {
+pre code {
 	overflow: auto;
 }
 
